tests/snapshots/transactions/raw/no_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - transactions
    - raw
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <TX_ID>

Usage: kermit transactions raw <TX_ID>

For more information, try '--help'.
